# p2l-validation

./: .gitignore  README.md  pyproject.toml
picktolearn/: analysis.py  evaluation.py  mnist_example.py  p2l.py  run_evaluation.py  validation.py
results/: evaluation_results.pkl
