[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "picktolearn"
version = "0.0.1"
description = "Pick-To-Learn, in Python / Jax"
authors = [{ name = "Daniel Morton", email = "danielpmorton@gmail.com" }]
readme = "README.md"
keywords = ["pick to learn", "generalization bounds", "compression", "statistical learning", "Jax"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "jax",
    "jaxlib",
    "flax",
    "optax",
    "tqdm",
]

[project.urls]
Repository = "https://github.com/danielpmorton/picktolearn/"

[project.optional-dependencies]
examples = [
    "torch",
    "torchvision",
]
dev = ["pylint", "black"]
all = [
    "pylint",
    "black",
    "torch",
    "torchvision",
]
